--- a/URDF/FOC_URDF/package.xml
+++ b/URDF/FOC_URDF/package.xml
@@ -1,10 +1,10 @@
 <package format="2">
-  <name>FOC_URDF</name>
+  <name>foc_urdf</name>
   <version>1.0.0</version>
   <description>
-    <p>URDF Description package for FOC_URDF</p>
+    <p>URDF Description package for foc_urdf</p>
     <p>This package contains configuration data, 3D models and launch files
-for FOC_URDF robot</p>
+for foc_urdf robot</p>
   </description>
   <author>TODO</author>
   <maintainer email="TODO@email.com" />
