--- a/urdf_lowercase/foc_urdf/config/joint_names_foc_urdf.yaml
+++ b/urdf_lowercase/foc_urdf/config/joint_names_foc_urdf.yaml
@@ -1,1 +1,1 @@
-controller_joint_names: ['', 'leg01_left', 'leg12_left', 'leg23_left', 'tire_left', 'leg40_left', 'leg43_left', 'leg01_right', 'leg12_right', 'leg23_right', 'tire_right', 'leg04_right', 'leg43_right', ]
+controller_joint_names: ['', 'joint01_left', 'joint12_left', 'joint23_left', 'joint_tire_left', 'joint04_left', 'joint43_left', 'joint01_right', 'joint12_right', 'joint23_right', 'joint_tire_right', 'joint04_right', 'joint43_right', ]
