--- a/urdf/foc_urdf_transmission/config/controllers.yaml
+++ b/urdf/foc_urdf_transmission/config/controllers.yaml
@@ -1,49 +1,49 @@
-# joint_state_controller:
-#   type: joint_state_controller/JointStateController
-#   publish_rate: 50  # Hz
-
-# effort_joint_trajectory_controller:
-#   type: effort_controllers/JointTrajectoryController
-#   joints:
-#     - joint01_left
-#     - joint01_right
-#     - joint04_left
-#     - joint04_right
-#     - joint_tire_left
-#     - joint_tire_right
-#   gains:
-#     joint01_left: {p: 100.0, i: 0.01, d: 10.0}
-#     joint01_right: {p: 100.0, i: 0.01, d: 10.0}
-#     joint04_left: {p: 100.0, i: 0.01, d: 10.0}
-#     joint04_right: {p: 100.0, i: 0.01, d: 10.0}
-#     joint_tire_left: {p: 100.0, i: 0.01, d: 10.0}
-#     joint_tire_right: {p: 100.0, i: 0.01, d: 10.0}
-
 joint_state_controller:
   type: joint_state_controller/JointStateController
   publish_rate: 50  # Hz
 
-joint01_left_effort_controller:
-  type: effort_controllers/JointEffortController
-  joint: joint01_left
+effort_joint_trajectory_controller:
+  type: effort_controllers/JointTrajectoryController
+  joints:
+    - joint01_left
+    - joint01_right
+    - joint04_left
+    - joint04_right
+    - joint_tire_left
+    - joint_tire_right
+  gains:
+    joint01_left: {p: 100.0, i: 0.01, d: 10.0}
+    joint01_right: {p: 100.0, i: 0.01, d: 10.0}
+    joint04_left: {p: 100.0, i: 0.01, d: 10.0}
+    joint04_right: {p: 100.0, i: 0.01, d: 10.0}
+    joint_tire_left: {p: 100.0, i: 0.01, d: 10.0}
+    joint_tire_right: {p: 100.0, i: 0.01, d: 10.0}
 
-joint01_right_effort_controller:
-  type: effort_controllers/JointEffortController
-  joint: joint01_right
+# joint_state_controller:
+#   type: joint_state_controller/JointStateController
+#   publish_rate: 50  # Hz
 
-joint04_left_effort_controller:
-  type: effort_controllers/JointEffortController
-  joint: joint04_left
+# joint01_left_effort_controller:
+#   type: effort_controllers/JointEffortController
+#   joint: joint01_left
 
-joint04_right_effort_controller:
-  type: effort_controllers/JointEffortController
-  joint: joint04_right
+# joint01_right_effort_controller:
+#   type: effort_controllers/JointEffortController
+#   joint: joint01_right
 
-joint_tire_left_effort_controller:
-  type: effort_controllers/JointEffortController
-  joint: joint_tire_left
+# joint04_left_effort_controller:
+#   type: effort_controllers/JointEffortController
+#   joint: joint04_left
 
-joint_tire_right_effort_controller:
-  type: effort_controllers/JointEffortController
-  joint: joint_tire_right
+# joint04_right_effort_controller:
+#   type: effort_controllers/JointEffortController
+#   joint: joint04_right
+
+# joint_tire_left_effort_controller:
+#   type: effort_controllers/JointEffortController
+#   joint: joint_tire_left
+
+# joint_tire_right_effort_controller:
+#   type: effort_controllers/JointEffortController
+#   joint: joint_tire_right
 
