--- a/urdf/foc_urdf_transmission/config/controllers.yaml
+++ b/urdf/foc_urdf_transmission/config/controllers.yaml
@@ -3,7 +3,7 @@ joint_state_controller:
   publish_rate: 50  # Hz
 
 effort_joint_trajectory_controller:
-  type: effort_controllers/JointTrajectoryController
+  type: effort_controllers/JointEffortController
   joints:
     - joint01_left
     - joint01_right
@@ -11,13 +11,13 @@ effort_joint_trajectory_controller:
     - joint04_right
     - joint_tire_left
     - joint_tire_right
-  gains:
-    joint01_left: {p: 100.0, i: 0.01, d: 10.0}
-    joint01_right: {p: 100.0, i: 0.01, d: 10.0}
-    joint04_left: {p: 100.0, i: 0.01, d: 10.0}
-    joint04_right: {p: 100.0, i: 0.01, d: 10.0}
-    joint_tire_left: {p: 100.0, i: 0.01, d: 10.0}
-    joint_tire_right: {p: 100.0, i: 0.01, d: 10.0}
+  # gains:
+  #   joint01_left: {p: 100.0, i: 0.01, d: 10.0}
+  #   joint01_right: {p: 100.0, i: 0.01, d: 10.0}
+  #   joint04_left: {p: 100.0, i: 0.01, d: 10.0}
+  #   joint04_right: {p: 100.0, i: 0.01, d: 10.0}
+  #   joint_tire_left: {p: 100.0, i: 0.01, d: 10.0}
+  #   joint_tire_right: {p: 100.0, i: 0.01, d: 10.0}
 
 # joint_state_controller:
 #   type: joint_state_controller/JointStateController
