--- a/src/balance_robo_controller/config/controller.yaml
+++ b/src/balance_robo_controller/config/controller.yaml
@@ -16,45 +16,35 @@ balance_robot_controller:
     - joint01_right    # 右前腿关节
     - joint04_left     # 左后腿关节
     - joint04_right    # 右后腿关节
-    - joint_tire_left  # 左轮
-    - joint_tire_right # 右轮
+    # - joint_tire_left  # 左轮
+    # - joint_tire_right # 右轮
     
   # 控制器参数
   gains:
-    # Yaw控制器（航向）
-    yaw_p: 0.0
-    yaw_i: 0.0
-    yaw_d: 0.0
-    yaw_max_i: 0.0
-    yaw_max_out: 2.0
-    
-    # Roll控制器（侧倾）
-    roll_p: 0.0
-    roll_i: 0.0
-    roll_d: 0.0
-    roll_max_i: 0.0
-    roll_max_out: 3.0
-    
-    # 腿部长度控制器
-    leg_length_p: 500.0
-    leg_length_i: 0.0
-    leg_length_d: 0.0
-    leg_length_max_i: 0.0
-    leg_length_max_out: 0.5
-    
-    # 腿部角度控制器
-    leg_angle_p: 500.0
-    leg_angle_i: 0.0
-    leg_angle_d: 0.0
-    leg_angle_max_i: 0.0
-    leg_angle_max_out: 20.0
-    
-  # 目标值
+    # Yaw 控制器（航向）– you probably don’t need 100 Nm/rad of yaw
+    yaw_p:        5.0
+    yaw_d:        1.0
+    yaw_max_out:  1.0
+
+    # Roll 控制器（侧倾）– gentler P, a bit more D
+    roll_p:       40.0    # ↓ from 100
+    roll_d:       50.0    # ↑ from 20
+    roll_max_out: 3.0     # ↓ from 8
+
+    # 腿部长度控制器 – must exceed static weight (~6 N)
+    leg_length_p:       80.0   # ↑ from 100, to stiffen under load
+    leg_length_d:       20.0    # ↑ from 8, to damp leg bounce
+    leg_length_max_out: 8.0    # ↑ from 0.5, give ≈2× static load
+
+    # 腿部角度控制器 – use a real P
+    leg_angle_p:        30.0    # ↑ from 5
+    leg_angle_d:         10.0    # small damping
+    leg_angle_max_out:   5.0    # clamp torque to ±10 Nm
+
   target:
-    leg_length: 0.07   # 目标腿长(m)
-    roll_angle: 0.0    # 目标侧倾角(rad)
-    
-  # 物理参数
+    leg_length: 0.07
+    roll_angle: 0.0
+
   physics:
-    wheel_radius: 0.026  # 车轮半径(m)
-    leg_mass: 0.05       # 腿部质量(kg)
+    wheel_radius: 0.026
+    leg_mass:     0.05
